- Made minor mod for all html pages - Seperated out CSS stylesheet - Added readme.md - Renamed and restructured files

--- a/cart.html
+++ b/cart.html
@@ -21,6 +21,7 @@
             <button class="nav-btn-style"><span class="material-icons">account_circle</span></button>
             <button class="nav-btn-style"><span class="material-icons">shopping_cart</span></button>
             <button class="nav-btn-style"><span class="material-icons">star_rate</span></button>
+            <a class="nav-btn-style">Logout</a>
         </div>
     </nav>
 
