--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         <form>
             <h4>Please Log in below</h4>
             <label for="email">Email ID <span class="required">*</span></label>
-            <input type="text" id="email" name="email" placeholder="name@example.com"><br>
+            <input type="text" id="email" name="email" placeholder="name@example.com">
             <label for="pwd">Password</label>
             <input type="password" id="password" name="password"><br>
             <div class="form-btn-container">
