--- a/products.html
+++ b/products.html
@@ -21,6 +21,7 @@
             <button class="nav-btn-style"><span class="material-icons">account_circle</span></button>
             <button class="nav-btn-style"><span class="material-icons">shopping_cart</span></button>
             <button class="nav-btn-style"><span class="material-icons">star_rate</span></button>
+            <a class="nav-btn-style">Logout</a>
         </div>
     </nav>
 
@@ -30,7 +31,7 @@
             <h4>Filter By</h4>
             <div class="slider-container">
                 <h5>Price</h5>
-                <input type="range" min="0" max="100" value="50" class="slider" id="myRange1">
+                <input type="range" min="100" max="2000" value="50" class="slider" id="price-range">
             </div>
             <div class="checkbox-container">
                 <h5>Category</h5>
