--- a/sign_up.html
+++ b/sign_up.html
@@ -27,15 +27,15 @@
         <form>
             <h4>Please fill in details below to sign up</h4>
             <label for="fname">First name <span class="required">*</span></label>
-            <input type="text" id="fname" name="fname"><br>
+            <input type="text" id="fname" name="fname">
             <label for="lname">Last name <span class="required">*</span></label>
-            <input type="text" id="lname" name="lname"><br>
+            <input type="text" id="lname" name="lname">
             <label for="dob">Date of Birth</label>
-            <input type="date" id="dob" name="dob"><br>
+            <input type="date" id="dob" name="dob">
             <label for="email">Email ID <span class="required">*</span></label>
-            <input type="text" id="email" name="email" placeholder="name@example.com"><br>
+            <input type="text" id="email" name="email" placeholder="name@example.com">
             <label for="pwd">Password</label>
-            <input type="password" id="password" name="password"><br>
+            <input type="password" id="password" name="password">
             <div class="form-btn-container">
                 <button class="primary-btn">Sign Up</button>
             </div>
