--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button class="nav-btn-style"><span class="material-icons">account_circle</span></button>
             <button class="nav-btn-style"><span class="material-icons">shopping_cart</span></button>
             <button class="nav-btn-style"><span class="material-icons">star_rate</span></button>
+            <a class="nav-btn-style">Logout</a>
         </div>
     </nav>
 
