made more minor modiifcations

--- a/sign_up.html
+++ b/sign_up.html
@@ -37,7 +37,7 @@
             <label for="pwd">Password</label>
             <input type="password" id="password" name="password">
             <div class="form-btn-container">
-                <button class="primary-btn">Sign Up</button>
+                <button class="primary-btn">Create an Account</button>
             </div>
         </form>
     </div>
